2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: the number of arguments for apr_socket_create
	depends on the apr version used when compiling. Fixes bug #77933.

2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: fix compilation for systems that do not have stdint.h.
	Patch by "CK Ng".

2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: more hackery for 1.3 and apr-config. Fixes bug #77928.
	Patch by jedynamic@bellsouth.net.

2006-03-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: add apxs -q CFLAGS. Fixes bug #77764.

2006-02-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: append --includes from apr-config to CFLAGS.

2006-01-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: actually write the result of IS_CONNECTED. Patch by
	Cyrille Colin.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in:
	* src/mod_mono.[ch]: now apache 2.2 is supported.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: patch by Dean Brettle that fixes chunked encoding
	support.

2005-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* man/mod_mono.8.in:
	* INSTALL: add documentation about the control panel. Patch by Matthew
	Law.

2005-11-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: make auto-hosting work in apache 1.3.

2005-11-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: fix problems in 1.1.10 regarding user-configured applications.
	We were finding the global server instead of the default one.

2005-11-09  Robert Jordan  <robertj@gmx.net>

	* src/mod_mono.*: fixed compatibility issue with Apache 1.3.

2005-11-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mod_mono.conf.in: added ASP.NET extensions to the configuration file.
	* src/mod_mono.c: added MonoAutoApplication directive and support for
	automatically registering new ASP.NET applications as they are