@@ -1,3 +1,8 @@
+2006-04-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* src/mod_mono.c: reuse the memory allocated when mod-mono-server reads
+	the request body. Patch by Dean Brettle.
+
 2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* src/mod_mono.[ch]: the number of arguments for apr_socket_create
